# Demiurge

./: CMakeLists.txt  CODING_STYLE.htm  LICENSE  README.md  gamedev_info.hpp  includes.hpp  main.cpp
BitmapFont/Font/: BmpFont.cpp  BmpFont.hpp
BitmapFont/Text/: BmpText.cpp  BmpText.hpp
Game/: Game.cpp  Game.hpp
Game/GameEngine/: GameEngine.cpp  GameEngine.hpp
Game/GameEngine/RenderTargetsManager/: RenderTargetsDefinitions.hpp  RenderTargetsIdentifiers.hpp  RenderTargetsManager.cpp  RenderTargetsManager.hpp
Game/GameEngine/RenderTargetsManager/RenderWindow/: RenderWindow.cpp  RenderWindow.hpp
Game/GameEngine/States/: State.cpp  State.hpp  StateStack.cpp  StateStack.hpp
Game/GameEngine/States/GameStates/: StateDefinitions.hpp  StateIdentifiers.hpp
Game/GameEngine/States/GameStates/CrashState/: CrashState.cpp  CrashState.hpp
Game/GameEngine/States/GameStates/InDevInfoState/: InDevInfoState.cpp  InDevInfoState.hpp
datas/fonts/shaders/: font_fragshader.glsl  font_vertshader.glsl
datas/meshes/primitive3D/: Box.xml  Pyramid.xml
datas/shaders/: fragment_classic.glsl  fragment_skybox.glsl  fragment_wired.glsl  shaders.xml  vertex_skybox.glsl  vertex_wired.glsl
include/DRIMI/: Interpolation.hpp  Interpolation.inl
include/DRIMI/BitmapFont/: BmpFont.hpp  BmpText.hpp
include/DRIMI/Mathematics/: Config.hpp
include/DRIMI/Mathematics/Core/Matrix/: Mat4x4f.hpp
include/DRIMI/Mathematics/Core/Vectors/: Vec2f.hpp  Vec3f.hpp  Vec4f.hpp  Vec6f.hpp
include/DRIMI/Mathematics/Methods/: Exponential.hpp  Geometric.hpp  Matrix_transform.hpp  ToString.hpp  Trigonometric.hpp  TypePtr.hpp  Vectorize.hpp
include/DRIMI/Noise/Perlin/: Perlin1D.hpp  Perlin2D.hpp  Perlin3D.hpp
include/DRIMI/Utils/: EventTypes.hpp
include/Game/: EventTypes.hpp  Game.hpp  gamedev_info.hpp  includes.hpp
include/Game/GameEngine/: Definitions.hpp  GameEngine.hpp  ManagerSignals.hpp
include/Game/GameEngine/File/: File.hpp
include/Game/GameEngine/GameObjects/: GameObject.hpp  GameObject2D.hpp  GameObject3D.hpp  GameObjectDefinitions.hpp  GameObjectIdentifiers.hpp  GameObjectsManager.hpp
include/Game/GameEngine/GraphicsEngine/: GraphicsEngine.hpp  OGLManager.hpp  Renderer2D.hpp  Renderer3D.hpp
include/Game/GameEngine/GraphicsEngine/Renderer2D/: RenderList2D.hpp  Renderer2D.hpp
include/Game/GameEngine/GraphicsEngine/Renderer3D/: Object3D.hpp  RenderList3D.hpp  Renderer3D.hpp
include/Game/GameEngine/GraphicsEngine/Textures2D/: Textures2DIdentifiers.hpp  Textures2DManager.hpp
include/Game/GameEngine/RenderTargets/: RenderTarget.hpp  RenderTargetsDefinitions.hpp  RenderTargetsManager.hpp  RenderWindow.hpp
include/Game/GameEngine/States/: Factories.hpp  State.hpp  StateStack.hpp
include/Game/GameEngine/States/GameStates/: CrashState.hpp  InDevInfoState.hpp  StateDefinitions.hpp  StateIdentifiers.hpp  TitleState.hpp  WorldState.hpp
include/Game/GameObjects/: GOSkybox.hpp  GO_Box.hpp  GO_Skybox.hpp
include/Game/GameObjects/TitleState/: GOLicense.hpp  GOMainMenu.hpp  GOTitle.hpp  GOTitleBackground.hpp
include/Game/GameObjects/VertexBufferObjects/: Box.hpp
include/Game/GameObjects/WorldState/: GOBox.hpp  GOCamera.hpp  GOSimpleInformations.hpp  GOSkybox.hpp
src/: main.cpp
src/DRIMI/BitmapFont/: BmpFont.cpp  BmpText.cpp
src/DRIMI/Mathematics/Core/Matrix/: Mat4x4f.cpp
src/DRIMI/Mathematics/Core/Vectors/: Vec2f.cpp  Vec3f.cpp  Vec4f.cpp  Vec6f.cpp
src/DRIMI/Mathematics/Methods/: Exponential.cpp  Geometric.cpp  Matrix_transform.cpp  ToString.cpp  Trigonometric.cpp  TypePtr.cpp
src/DRIMI/Noise/Perlin/: Perlin1D.cpp  Perlin2D.cpp  Perlin3D.cpp
src/Game/: Game.cpp
src/Game/GameEngine/: GameEngine.cpp
src/Game/GameEngine/File/: File.cpp
src/Game/GameEngine/GameObjects/: GameObject.cpp  GameObject2D.cpp  GameObject3D.cpp  GameObjectsManager.cpp
src/Game/GameEngine/GraphicsEngine/: GraphicsEngine.cpp  OGLManager.cpp  Renderer2D.cpp  Renderer3D.cpp
src/Game/GameEngine/GraphicsEngine/Renderer2D/: RenderList2D.cpp  Renderer2D.cpp
src/Game/GameEngine/GraphicsEngine/Renderer3D/: Object3D.cpp  RenderList3D.cpp  Renderer3D.cpp
src/Game/GameEngine/RenderTargets/: RenderTarget.cpp  RenderTargetsManager.cpp  RenderWindow.cpp
src/Game/GameEngine/States/: Factories.cpp  State.cpp  StateStack.cpp
src/Game/GameEngine/Textures2D/: Textures2DManager.cpp
src/Game/GameObjects/: GOSkybox.cpp  GO_Box.cpp  GO_Skybox.cpp
src/Game/GameObjects/TitleState/: GOLicense.cpp  GOMainMenu.cpp  GOTitle.cpp  GOTitleBackground.cpp
src/Game/GameObjects/VertexBufferObjects/: Box.cpp
src/Game/GameObjects/WorldState/: GOBox.cpp  GOCamera.cpp  GOSimpleInformations.cpp  GOSkybox.cpp
(+59 files in other folders)
